// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documents Should generate a non-mass ID 1`] = `
Object {
  "Address city": "Example",
  "Address state": "MA",
  "Address street": "123 Test Way",
  "Date birth": "06/07/2020",
  "Date expiration": "01/01/2028",
  "Date issue": "01/01/2020",
  "License number": "XXX",
  "Name first": "John",
  "Name last": "Smith",
  "address ZIP": "01000",
}
`;

exports[`Documents Should generate an HCP form 1`] = `
Object {
  "Absence length": undefined,
  "Absence length: At least one day, up to": undefined,
  "Absence length: Less than one full work day, up to": undefined,
  "Absences": undefined,
  "Activities the patient should refrain from": undefined,
  "Are you applying for your own serious health condition?": "Yes",
  "Area of practice": "General Medicine",
  "Conditiion start yyyy": Any<String>,
  "Condition start dd": Any<String>,
  "Condition start mm": Any<String>,
  "Continuous end dd": "01",
  "Continuous end mm": "09",
  "Continuous end yyyy": "2020",
  "Continuous leave": true,
  "Continuous start dd": "01",
  "Continuous start mm": "08",
  "Continuous start yyyy": "2020",
  "Days": undefined,
  "Delivery dd": undefined,
  "Delivery mm": undefined,
  "Delivery yyyy": undefined,
  "Does the patient have a serious health condition": "Yes",
  "Emp. DOB dd": "07",
  "Emp. DOB mm": "06",
  "Emp. DOB yyyy": "2020",
  "Emp. Phone 1": undefined,
  "Emp. Phone 2": undefined,
  "Emp. SSI last 4": "0000",
  "Emp. phone 3": undefined,
  "Employee": "John Smith",
  "Employee Last name": "Smith",
  "Employee Name": undefined,
  "Employee first name": "John",
  "Employee name": "John Smith",
  "Has incapacitated or will incapacitate": false,
  "Hours": undefined,
  "Hours of reduced leave schedule": undefined,
  "Intermittent end dd": undefined,
  "Intermittent end mm": undefined,
  "Intermittent end yyyy": undefined,
  "Intermittent leave": false,
  "Intermittent start dd": undefined,
  "Intermittent start mm": undefined,
  "Intermittent start yyyy": undefined,
  "Is chronic, requires treatments at least twice a year, and may require periodic absences": false,
  "Is longterm and requires ongoing": false,
  "Is this health condition a jobrelated injury": "No_3",
  "License": "[assume license is valid]",
  "License state": undefined,
  "Medical Provider Signature_es_:signer:signature": undefined,
  "Medical facts": undefined,
  "No": undefined,
  "No continuous leave needed": false,
  "No pregnancy": true,
  "No reduced leave schedule needed": true,
  "Occupation": undefined,
  "Office Phone 1": "555",
  "Office Phone 2": "555",
  "Office fax 1": undefined,
  "Office fax 2": undefined,
  "Office fax 3": undefined,
  "Office phone 3": "5555",
  "Official Document First Name": undefined,
  "Official Document Last Name": undefined,
  "Official Document Middle Name": undefined,
  "Practice name": "[assume business is valid]",
  "Provider Address": undefined,
  "Provider Title": "MD",
  "Provider initial Page 3": "TC",
  "Provider initial Page 4": "TC",
  "Provider initial Page 6": "TC",
  "Provider initial, Page 5": "TC",
  "Provider name": "Theodore Cure",
  "Reduced end dd": undefined,
  "Reduced end mm": undefined,
  "Reduced end yyyy": undefined,
  "Reduced leave schedule": false,
  "Reduced start dd": undefined,
  "Reduced start mm": undefined,
  "Reduced start yyyy": undefined,
  "Requires multiple treatments and": false,
  "Requires one medical visit": true,
  "Requires or did require": true,
  "Requires two or more medical": false,
  "Signed dd": undefined,
  "Signed mm": undefined,
  "Signed yyyy": undefined,
  "Times per month": undefined,
  "Times per week": undefined,
  "Times total": undefined,
  "Weeks of a reduced leave schedule": undefined,
  "Weeks of continuous leave": "4",
  "Yes": undefined,
  "Yes Pregnancy": false,
  "no reduced leave schedule needed": true,
}
`;

exports[`Documents Should generate an invalid HCP form 1`] = `
Object {
  "Absence length": undefined,
  "Absence length: At least one day, up to": undefined,
  "Absence length: Less than one full work day, up to": undefined,
  "Absences": undefined,
  "Activities the patient should refrain from": undefined,
  "Are you applying for your own serious health condition?": "Yes",
  "Area of practice": "General Medicine",
  "Conditiion start yyyy": Any<String>,
  "Condition start dd": Any<String>,
  "Condition start mm": Any<String>,
  "Continuous end dd": "01",
  "Continuous end mm": "09",
  "Continuous end yyyy": "2020",
  "Continuous leave": true,
  "Continuous start dd": "01",
  "Continuous start mm": "08",
  "Continuous start yyyy": "2020",
  "Days": undefined,
  "Delivery dd": undefined,
  "Delivery mm": undefined,
  "Delivery yyyy": undefined,
  "Does the patient have a serious health condition": "Yes",
  "Emp. DOB dd": "07",
  "Emp. DOB mm": "06",
  "Emp. DOB yyyy": undefined,
  "Emp. Phone 1": undefined,
  "Emp. Phone 2": undefined,
  "Emp. SSI last 4": undefined,
  "Emp. phone 3": undefined,
  "Employee": "John Smith",
  "Employee Last name": "Smith",
  "Employee Name": undefined,
  "Employee first name": "John",
  "Employee name": "John Smith",
  "Has incapacitated or will incapacitate": false,
  "Hours": undefined,
  "Hours of reduced leave schedule": undefined,
  "Intermittent end dd": undefined,
  "Intermittent end mm": undefined,
  "Intermittent end yyyy": undefined,
  "Intermittent leave": false,
  "Intermittent start dd": undefined,
  "Intermittent start mm": undefined,
  "Intermittent start yyyy": undefined,
  "Is chronic, requires treatments at least twice a year, and may require periodic absences": false,
  "Is longterm and requires ongoing": false,
  "Is this health condition a jobrelated injury": "No_3",
  "License": "[assume license is valid]",
  "License state": undefined,
  "Medical Provider Signature_es_:signer:signature": undefined,
  "Medical facts": undefined,
  "No": undefined,
  "No continuous leave needed": false,
  "No pregnancy": true,
  "No reduced leave schedule needed": true,
  "Occupation": undefined,
  "Office Phone 1": "555",
  "Office Phone 2": "555",
  "Office fax 1": undefined,
  "Office fax 2": undefined,
  "Office fax 3": undefined,
  "Office phone 3": "5555",
  "Official Document First Name": undefined,
  "Official Document Last Name": undefined,
  "Official Document Middle Name": undefined,
  "Practice name": "[assume business is valid]",
  "Provider Address": undefined,
  "Provider Title": "MD",
  "Provider initial Page 3": "TC",
  "Provider initial Page 4": "TC",
  "Provider initial Page 6": "TC",
  "Provider initial, Page 5": "TC",
  "Provider name": "Theodore Cure",
  "Reduced end dd": undefined,
  "Reduced end mm": undefined,
  "Reduced end yyyy": undefined,
  "Reduced leave schedule": false,
  "Reduced start dd": undefined,
  "Reduced start mm": undefined,
  "Reduced start yyyy": undefined,
  "Requires multiple treatments and": false,
  "Requires one medical visit": true,
  "Requires or did require": true,
  "Requires two or more medical": false,
  "Signed dd": undefined,
  "Signed mm": undefined,
  "Signed yyyy": undefined,
  "Times per month": undefined,
  "Times per week": undefined,
  "Times total": undefined,
  "Weeks of a reduced leave schedule": undefined,
  "Weeks of continuous leave": "4",
  "Yes": undefined,
  "Yes Pregnancy": false,
  "no reduced leave schedule needed": true,
}
`;
